<resources>
    <string name="app_name">速通</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="name">姓名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="an_password">确认密码</string>
    <string name="address">地址</string>
    <string name="ok">确认</string>
    <string name="user_name">账号</string>
    <string name="log_in">登陆</string>
    <string name="sign_in">注册</string>
    <string name="message">短信</string>
    <string name="phone">电话</string>
    <string name="search">查找</string>
    <string name="createClass">创建班级</string>
    <string name="searchClass">搜索班级</string>
    <string name="wait_me_agree">待我批准</string>
    <string name="joinClass">加入班级</string>
    <string name="exitClass">退出班级</string>
    <string name="agreeJoin">同意加入</string>
    <string name="wantJoinClass">申请加入</string>
    <string name="className">班级名称</string>
    <string name="classInformation">班级信息</string>
    <string name="search_class_name">班级名称：</string>
    <string name="search_user_name">创建人名：</string>
    <string name="no_this_class">查无此班</string>
    <string name="the_class_information">本班信息</string>
    <string name="class_id_no">班级ID</string>
    <string name="class_id">班级ID：</string>
    <string name="class_name">班级名称：</string>
    <string name="class_user_name">创建人名：</string>
    <string name="class_information">班级信息：</string>
    <string name="class_date">创建时间：</string>
</resources>
