<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:collapseColumns="*">
        <TableRow
            android:paddingBottom="@dimen/table">
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="@dimen/signin"
                android:padding="5dp"
                android:layout_height="40dp"
                android:background="@drawable/editviewlayout"
                android:hint="@string/name"
                android:singleLine="true"/>
        </TableRow>
        <TableRow
            android:paddingBottom="@dimen/table">
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="@dimen/signin"
                android:padding="5dp"
                android:layout_height="40dp"
                android:background="@drawable/editviewlayout"
                android:hint="@string/email"
                android:singleLine="true"/>
        </TableRow>
        <TableRow
            android:paddingBottom="@dimen/table">
            <EditText
                android:id="@+id/edit_address"
                android:layout_width="@dimen/signin"
                android:layout_height="40dp"
                android:padding="5dp"
                android:background="@drawable/editviewlayout"
                android:hint="@string/address"
                android:singleLine="true"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"/>
</LinearLayout>